--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "pino-pretty": "^11.2.2"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.20.0",
