--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,14 @@ MONGODB_USER=yourMongoUser
 MONGODB_PASSWORD=yourMongoPassword
 MONGODB_URL=yourMongoClusterURL
 MONGODB_DB=yourDatabaseName
+
+SMTP_HOST=smtp-relay.brevo.com   
+SMTP_PORT=587                 
+SMTP_USER=your_smtp_login         
+SMTP_PASSWORD=your_smtp_password 
+SMTP_FROM=no-reply@yourdomain.com
+
+JWT_SECRET=your_jwt_secret_key
+
+APP_DOMAIN=http://localhost:3000/auth
+
