--- a/.env.example
+++ b/.env.example
@@ -15,3 +15,7 @@ JWT_SECRET=your_jwt_secret_key
 
 APP_DOMAIN=http://localhost:3000/auth
 
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
+ENABLE_CLOUDINARY=true
