--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ SMTP_FROM=no-reply@yourdomain.com
 
 JWT_SECRET=your_jwt_secret_key
 
-APP_DOMAIN=http://localhost:3000/auth
+APP_DOMAIN=http://localhost:3000
 
 CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
 CLOUDINARY_API_KEY=your-cloudinary-api-key
