--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "npm run build-docs",
+    "build-docs": "redocly bundle --ext json -o docs/swagger.json",
+    "preview-docs": "redocly preview-docs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@redocly/cli": "^1.25.5",
     "nodemon": "^3.1.4",
     "pino-pretty": "^11.2.2"
   },
@@ -31,6 +35,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "pino": "^9.4.0",
-    "pino-http": "^10.3.0"
+    "pino-http": "^10.3.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
