--- a/swagger/paths/contacts/{id}/patch.yaml
+++ b/swagger/paths/contacts/{id}/patch.yaml
@@ -25,7 +25,23 @@ requestBody:
           phoneNumber:
             description: "Contact's phone number"
             type: string
-            example: '+123456789'
+            example: '+380123456789'
+          email:
+            description: "Contact's email address"
+            type: string
+            example: 'johndoe@example.com'
+          contactType:
+            description: 'Type of contact'
+            type: string
+            enum: ['personal', 'work', 'other']
+          isFavourite:
+            description: 'Whether the contact is a favorite'
+            type: boolean
+            example: false
+          photo:
+            description: "Contact's photo"
+            type: string
+            format: binary
 responses:
   '200':
     description: 'Update contact by id'
@@ -43,9 +59,11 @@ responses:
               example: 200
             message:
               type: string
-              example: Successfully updated contact!
+              example: Successfully updated the contact!
             data:
               type: object
               $ref: '../../../components/schemas/contact.yaml'
+  '404':
+    $ref: '../../../components/responses/404.yaml'
   '401':
     $ref: '../../../components/responses/401.yaml'
